syntax = "proto3";
package movie;
option go_package = "github.com/rkfcccccc/english_words/proto/movie";

message Movie {
    int32 id = 1;
    string imdb_id = 2;
    string title = 3;
    int32 year = 4;
    string poster_url = 5;
}

message MovieWords {
    repeated string words = 1;
}

/* Create */
message CreateRequest {
    Movie movie = 1;
    repeated string words = 2;
}

message CreateResponse {
    int32 movieId = 1;
}


/* CreateByUrl */
message CreateByUrlRequest {
    Movie movie = 1;
    string subtitlesUrl = 2;
}

message CreateByUrlResponse {
    int32 movieId = 1;
}

/* Get */ 
message GetRequest {
    int32 movie_id = 1;
}

/* Delete */
message DeleteRequest {
    int32 movie_id = 1;
}

message DeleteResponse {}

/* User */ 
message FavoritesRequest {
    int32 user_id = 1;
}

message FavoritesResponse {
    repeated Movie movies = 1;
}

message AddUserRequest {
    int32 movie_id = 1;
    int32 user_id = 2;
}

message RemoveUserRequest {
    int32 movie_id = 1;
    int32 user_id = 2;
}

message AddUserResponse {}
message RemoveUserResponse {}

service MovieService {
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc CreateByUrl(CreateByUrlRequest) returns (CreateByUrlResponse) {}

    rpc Get(GetRequest) returns (Movie) {}
    rpc GetWords(GetRequest) returns (MovieWords) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}

    rpc GetUserFavorites(FavoritesRequest) returns (FavoritesResponse) {}

    rpc AddUser(AddUserRequest) returns (AddUserResponse) {}
    rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse) {}
}

